{
    "name": "PlayerControlls",
    "maps": [
        {
            "name": "PlayerHead",
            "id": "e14e984c-525f-40cc-b703-89d9095f8e9c",
            "actions": [
                {
                    "name": "LeftAction",
                    "type": "Button",
                    "id": "28feda17-c316-49ab-b9d3-c64bd854fed6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightAction",
                    "type": "Button",
                    "id": "acb84f0a-51db-47c1-94bc-e753e7c0f265",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DownAction",
                    "type": "Button",
                    "id": "95144ec5-6a19-42c0-b757-3c5c240d48ed",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "UpAction",
                    "type": "Button",
                    "id": "efe161c9-5f6e-43f7-8332-fcb08d9c1c34",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "41b075bc-f7e2-40e2-8fe5-8e336f6440f5",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b832da27-0692-4d80-a2c5-1b84f1ffa0ef",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "81afd13c-afd9-4de2-8269-e32f51472cb1",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "66300cad-560a-4a46-bb0a-23b8db2d78e3",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "86a20e56-1c95-48e3-8504-27e399946f81",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DownAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c531b70-3403-43c3-9fd7-a3b40f8b9d78",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DownAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "308e4215-ef49-406a-bfbc-5f4f41531e54",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e219b648-5e09-4858-9b74-8011b04b22a1",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}